# NACHOSv2

./: .gitignore  README.md  environment.yml  pyproject.toml  setup_paths.py
bash/: mpi.md  run_multiple.sh  test_connection.py
batch/: distributed_lscratch_oct_test_k3.batch  distributed_lscratch_oct_test_k4.batch  distributed_lscratch_oct_test_k5.batch  distributed_lscratch_oct_test_k7.batch  distributed_lscratch_oct_test_k8.batch  distributed_lscratch_small_oct_test_k4.batch  distributed_oct_part1.batch  sequential_lscratch_small_oct.batch  sequential_small_oct.batch
batch/rs_nachos_v1/: rs_1_nachos_v1.batch  rs_2_nachos_v1.batch  rs_4_8_nachos_v1.batch
docs/: README.md  command_line_basics.md  getting_started.md  installation_instructions.md  pipeline_overview.md  readme_logging.md  results_processing.md  training_guide.md  troubleshooting.md  using_the_pipeline.md
nachos_v2/data_processing/: create_history.py  get_image_3d_dimensions.py  get_list_of_epochs.py
nachos_v2/file_processing/: file_getter.py  filter_files.py  write_csv_file.py
nachos_v2/image_processing/: image_getter.py  image_reader_global.py
nachos_v2/log_processing/: checkpointer.py  delete_log.py  log_utils.py  read_log.py
nachos_v2/model_processing/: create_model.py
nachos_v2/output_processing/: memory_leak_check.py
nachos_v2/setup/: command_line_parser.py  get_training_configs_list.py
nachosv2/: grad-cam.ipynb
nachosv2/checkpoint_processing/: construct_log_file_path.py  delete_log.py  load_log_file.py  load_save_metadata_checkpoint.py  log_utils.py  read_log.py
nachosv2/config_files/: 2D_config_inner_InceptionV3_trial_parallel.json
nachosv2/data_processing/: check_unique_subjects.py  create_data_csv.py  create_empty_history.py  edit_yaml_entry.py  fold_generator.py  full_dataset.py  get_list_of_epochs.py  modify_and_save_absolute_path.py  modify_and_save_yml.py  normalize.py  normalizer.py  read_metadata_csv.py  update_csv_absolute_filepath.py
nachosv2/file_processing/: file_name_utils.py  parse_mpi_training_configs.py
nachosv2/image_processing/: image_crop.py  image_parser.py  image_utils.py
nachosv2/inner_loop/: 3D_config_inner_conv3D_trial_parallel.json  cifar_test_config_inner_inceptionV3_trial_parallel.json
nachosv2/log_processing/: delete_log.py  load_log_file.py  read_log.py  write_log.py
nachosv2/model_processing/: create_model.py  initialize_model_weights.py  predict_model.py
nachosv2/output_processing/: memory_leak_check.py  result_outputter.py  result_outputter_utils.py
nachosv2/process_hpo/: process_hpo.json  process_hpo.py
nachosv2/setup/: command_line_parser.py  create_3D_kidney_csv.py  create_cifar10_dataset.py  define_dimensions.py  define_execution_device.py  files_check.py  get_class_names_from_prediction_path.py  get_config.py  get_config_list.py  get_filepath_list.py  get_training_configs_list.py  learning_rate_scheduler.py  utils.py  utils_processing.py  utils_training.py  verify_configuration_types.py
nachosv2/slurm_processing/: get_individual_configurations.py  individual_config.yaml
nachosv2/training/: sandbox.ipynb
scripts/config_files/: 3D_config_inner_InceptionV3_trial_parallel.json  3D_config_inner_conv3D_trial_parallel.json  cifar_test_config_inner_InceptionV3_trial_parallel.json  config_inner_InceptionV3_trial_parallel.json  conv3D.json  quick_test.json
src/data_processing/: calculate_mean_std.py  check_unique_subjects.py  create_cifar10_csv_and_image.py  index_getter.py  normalize.py  normalize_transform.py  read_data_csv.py  split_dataset.py
src/file_processing/: create_csv_file.py  get_from_directory.py  path_getter.py  quick_tests.py  read_csv_file.py
src/image_processing/: image_crop.py  image_reader.py  image_reader_csv.py  image_saver.py  image_transformations.py
src/log_processing/: construct_log_file_path.py  load_log_file.py  write_log.py
src/model_processing/: create_model.py  custom_softmax.py  evaluate_model.py  get_metrics_dictionary.py  get_number_parameters.py  predict_model.py  save_model.py
src/output_processing/: console_printing.py  result_outputter.py  result_outputter_utils.py
src/setup/: check_configuration_types.py  command_line_parser.py  create_cifar_csv.py
(+219 files in other folders)
