[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nachosv2"
version = "2.0"
requires-python = ">=3.9"
authors = [
  {name = "Paul Calle", email = "pcallec@ou.edu"},
  {name = "PanLab"}
   ]
description = "NACHOS is a framework that uses Nested Cross-Validation, HPO, and HPC."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    'deep learning',
    'medical imaging'
]
dependencies = [
  "termcolor",
  "pandas",
  "tensorboard",
  "scikit-image",
  "regex",
  "dill",
  "fasteners",
  "PyYAML",
  "mpi4py",
  "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/thepanlab/NACHOS_v2"
Repository = "https://github.com/thepanlab/NACHOS_v2"

[project.scripts]
NACHOSv2_train = "nachosv2.training.training.training:train"
NACHOSv2_get_summary = "nachosv2.results_processing.get_summary.get_summary:main"
NACHOSv2_get_confusion_matrix = "nachosv2.results_processing.confusion_matrix.get_confusion_matrix:main"

[tool.setuptools.packages.find]
# where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["nachosv2*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["nachosv2.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)